Fixed header-badge z-index and bump version 2.0.145

--- a/src/scss/layout/admin/header.scss
+++ b/src/scss/layout/admin/header.scss
@@ -126,6 +126,7 @@ header {
   min-width: 22px;
   padding: 0 4px;
   position: absolute;
+  z-index: 1;
   text-align: center;
   top: -5px;
   white-space: nowrap;
